<?xml version="1.0"?>
<package>
  <name>factory</name>
  <version>0.0.0</version>
  <description>The factory package</description>

 
  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>luctor_classes</build_depend>
  <build_depend>roscomm</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>luctor_classes</run_depend>
  <run_depend>roscomm</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>

  <export>

  </export>
</package>