<?xml version="1.0"?>
<package>
  <name>rose_common</name>
  <version>0.0.1</version>
  <description>The rose_common package</description>

  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>