<?xml version="1.0"?>
<package>
  <name>rose_debug</name>
  <version>0.0.0</version>
  <description>The rose_debug package</description>
  
  <maintainer email="hendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

  <export>
  
  </export>
</package>
