<?xml version="1.0"?>
<package>
  <name>rose_transformations</name>
  <version>0.0.0</version>
  <description>The rose_transformations package</description>

  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>rose_conversions</build_depend>
  <build_depend>rose_geometry</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>rose_conversions</run_depend>
  <run_depend>rose_geometry</run_depend>

  <export>
  </export>
</package>