<?xml version="1.0"?>
<package>
  <name>rose_twist_moving_average_filter</name>
  <version>0.0.1</version>
  <description>The rose_twist_moving_average_filter package</description>

  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>